// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`createReport should match snapshots (failed report) 1`] = `
Object {
  "runReport": Object {
    "failures": "",
    "summary": "Failed tests: 0/12. Failed suites: 0/5.",
    "title": "Test suite run failed",
  },
  "text": "<!-- jest coverage report action for options with hash 07a2060717d2c01f3ad9c6a8cfe3ca1b -->

## Coverage report 



| <div title=\\"Status of coverage:&#10; 🟢 - ok&#10; 🟡 - slightly more than threshold&#10; 🔴 - under the threshold\\">St.<sup>:grey_question:</sup></div> | Category   | Percentage | Covered / Total |
| :----------------------------------------------------------------------------------------------------------------------------------------------------: | :--------- | :--------- | :-------------: |
|                                                                           🟢                                                                           | Statements | 81.82%     |      27/33      |
|                                                                           🟢                                                                           | Branches   | 100%       |       8/8       |
|                                                                           🟡                                                                           | Functions  | 63.64%     |       7/11      |
|                                                                           🟢                                                                           | Lines      | 80.65%     |      25/31      |


## Test suite run failed
Failed tests: 0/12. Failed suites: 0/5.

<p align=\\"right\\">Report generated by <a href=\\"https://github.com/ArtiomTr/jest-coverage-report-action\\">🧪jest coverage report action</a> from 123456</p>
",
}
`;

exports[`createReport should match snapshots 1`] = `
Object {
  "runReport": Object {
    "failures": "",
    "summary": "12 tests passing in 5 suites.",
    "title": "Test suite run success",
  },
  "text": "<!-- jest coverage report action for options with hash 8f0735414be39738f79dc9c8549004e2 -->

## Coverage report for \`custom directory\`



| <div title=\\"Status of coverage:&#10; 🟢 - ok&#10; 🟡 - slightly more than threshold&#10; 🔴 - under the threshold\\">St.<sup>:grey_question:</sup></div> | Category   | Percentage | Covered / Total |
| :----------------------------------------------------------------------------------------------------------------------------------------------------: | :--------- | :--------- | :-------------: |
|                                                                           🟢                                                                           | Statements | 81.82%     |      27/33      |
|                                                                           🟢                                                                           | Branches   | 100%       |       8/8       |
|                                                                           🟡                                                                           | Functions  | 63.64%     |       7/11      |
|                                                                           🟢                                                                           | Lines      | 80.65%     |      25/31      |


## Test suite run success
12 tests passing in 5 suites.

<p align=\\"right\\">Report generated by <a href=\\"https://github.com/ArtiomTr/jest-coverage-report-action\\">🧪jest coverage report action</a> from 123456</p>
",
}
`;

exports[`createReport should match snapshots 2`] = `
Object {
  "runReport": Object {
    "failures": "",
    "summary": "12 tests passing in 5 suites.",
    "title": "Test suite run success",
  },
  "text": "<!-- jest coverage report action for options with hash 07a2060717d2c01f3ad9c6a8cfe3ca1b -->

## Coverage report 



| <div title=\\"Status of coverage:&#10; 🟢 - ok&#10; 🟡 - slightly more than threshold&#10; 🔴 - under the threshold\\">St.<sup>:grey_question:</sup></div> | Category   | Percentage | Covered / Total |
| :----------------------------------------------------------------------------------------------------------------------------------------------------: | :--------- | :--------- | :-------------: |
|                                                                           🟢                                                                           | Statements | 81.82%     |      27/33      |
|                                                                           🟢                                                                           | Branches   | 100%       |       8/8       |
|                                                                           🟡                                                                           | Functions  | 63.64%     |       7/11      |
|                                                                           🟢                                                                           | Lines      | 80.65%     |      25/31      |


## Test suite run success
12 tests passing in 5 suites.

<p align=\\"right\\">Report generated by <a href=\\"https://github.com/ArtiomTr/jest-coverage-report-action\\">🧪jest coverage report action</a> from 123456</p>
",
}
`;

exports[`createReport should match snapshots 3`] = `
Object {
  "runReport": Object {
    "failures": "",
    "summary": "12 tests passing in 5 suites.",
    "title": "Test suite run success",
  },
  "text": "<!-- jest coverage report action for options with hash 786d68e69563a4350059172c9bcae6ec -->

## Custom title with directory - for \`directory\`



| <div title=\\"Status of coverage:&#10; 🟢 - ok&#10; 🟡 - slightly more than threshold&#10; 🔴 - under the threshold\\">St.<sup>:grey_question:</sup></div> | Category   | Percentage | Covered / Total |
| :----------------------------------------------------------------------------------------------------------------------------------------------------: | :--------- | :--------- | :-------------: |
|                                                                           🟢                                                                           | Statements | 81.82%     |      27/33      |
|                                                                           🟢                                                                           | Branches   | 100%       |       8/8       |
|                                                                           🟡                                                                           | Functions  | 63.64%     |       7/11      |
|                                                                           🟢                                                                           | Lines      | 80.65%     |      25/31      |


## Test suite run success
12 tests passing in 5 suites.

<p align=\\"right\\">Report generated by <a href=\\"https://github.com/ArtiomTr/jest-coverage-report-action\\">🧪jest coverage report action</a> from 123456</p>
",
}
`;
